--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -9,7 +9,7 @@
 }
 
 .drop-shadow {
-        filter: drop-shadow(5px 0px 4px #fffb0056)
+        filter: drop-shadow(5px 0px 4px #0059ff56)
 }
 
 .no-select {
@@ -24,7 +24,19 @@
         background-color: #ffc107c8 !important;
 }
 
+.businessman {
+
+}
+
 tbody > tr:hover > * {
         background-color: #ffff !important;
         color: black !important;
+}
+
+body {
+        background-image:url("../../img/forest.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100vh;
 }
